name:                lhsmd
version:             1.0
synopsis:            Compile lhs in bird style to md, html, hs.
license:             PublicDomain
license-file:        LICENSE
author:              Julian Fleischer
maintainer:          julian.fleischer@warhog.net
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable lhsmd
  main-is:             lhsmd.hs
  -- other-modules:       
  build-depends:       base >=4.7 && <4.8, nicify
  hs-source-dirs:      src
  default-language:    Haskell2010



